--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,21 +23,29 @@ function(assign_source_group filter src_dir list)
     set(${list} ${_tmp} PARENT_SCOPE)
 endfunction(assign_source_group)
 
-function(add_libraries)
+macro(add_libraries)
     foreach(_lib IN ITEMS ${ARGN})
-        get_filename_component(_p "${CMAKE_LIBRARY_PATH}/${_lib}-${CMAKE_GENERATOR_PLATFORM}" ABSOLUTE)
+        get_filename_component(_p "${CMAKE_LIBRARY_PATH}/${_lib}-$(Platform)" ABSOLUTE)
         include_directories(${_p})
         if (MSVC)
             file(TO_NATIVE_PATH "${_p}/$(Configuration)" _p)
-            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:\"${_p}\"" PARENT_SCOPE)
+            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LIBPATH:\"${_p}\"")
         endif()
         message(STATUS "Library \"${_lib}\" added to the project")
     endforeach()
-endfunction(add_libraries)
+endmacro()
+
+macro(link_libraries target)
+    foreach(_lib IN ITEMS ${ARGN})
+        set(_libs ${_libs} ${library_files_${_lib}})
+    endforeach()
+    target_link_libraries(${target} ${_libs})
+endmacro()
 
 set(target RegionsMT)
 set(src_dir src)
 set(libraries gsl)
+set(library_files_gsl gsl gslcblas)
 
 project(${target})
 enable_language(C)
@@ -48,6 +56,11 @@ if (MSVC)
     add_definitions(-D_UNICODE)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4 /GL /arch:AVX /volatile:ms")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LTCG")
+    if (${FORCE_POSIX_THREADS})
+        add_definitions(-DFORCE_POSIX_THREADS)
+        set(libraries ${libraries} pthread-win32)
+        set(library_files_pthread-win32 pthreadVSE)
+    endif()
 endif()
 
 if (NOT DEFINED ${CMAKE_LIBRARY_PATH})
@@ -63,4 +76,4 @@ file(GLOB_RECURSE header_list RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/${src_dir}/"
 assign_source_group("Header Files" ${src_dir} header_list)
 
 add_executable(${target} ${source_list} ${header_list})
-target_link_libraries(RegionsMT ${libraries})
+link_libraries(${target} ${libraries})
