--- a/.install/pthread-win32/CMakeLists.txt
+++ b/.install/pthread-win32/CMakeLists.txt
@@ -1,51 +1,77 @@
 # This file is based on 
 #   https://github.com/martell/pthreads-win32.cmake/blob/master/CMakeLists.txt
+#
 # Only supports the creation of static library
 
 cmake_minimum_required(VERSION 3.14)
 
-set(target pthreads-win32)
-enable_language(C)
+macro(msvc_set_static_runtime)
+    set(_vars CMAKE_C_FLAGS_DEBUG CMAKE_C_FLAGS_MINSIZEREL CMAKE_C_FLAGS_RELEASE CMAKE_C_FLAGS_RELWITHDEBINFO)
+    foreach(_var IN ITEMS ${_vars})
+        string(REGEX REPLACE "/MD" "/MT" ${_var} "${${_var}}")
+    endforeach()
+endmacro()
+
+set(target pthread-win32)
+set(out_prefix pthread)
 
 project(${target})
 
-set(pthread_api ${CMAKE_CURRENT_SOURCE_DIR}/pthread.h ${CMAKE_CURRENT_SOURCE_DIR}/sched.h ${CMAKE_CURRENT_SOURCE_DIR}/semaphore.h)
-source_group("API Files" FILES ${pthread_api})
+enable_language(C)
+
+msvc_set_static_runtime()
 
 file(GLOB pthread_sources ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
+list(REMOVE_ITEM pthread_sources ${CMAKE_CURRENT_SOURCE_DIR}/pthread.c)
 source_group("Source Files" FILES ${pthread_sources})
 
-set(pthread_resources ${CMAKE_CURRENT_SOURCE_DIR}/version.rc)
-set(pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/config.h ${CMAKE_CURRENT_SOURCE_DIR}/implement.h ${CMAKE_CURRENT_SOURCE_DIR}/need_errno.h)
+file(GLOB pthread_resources ${CMAKE_CURRENT_SOURCE_DIR}/*.rc)
+source_group("Resources" FILES ${pthread_resources})
+
+set(pthread_headers_api_names pthread.h sched.h semaphore.h config.h)
+file(GLOB pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
+foreach(header ${pthread_headers_api_names})
+    list(REMOVE_ITEM pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/${header})
+    set(pthread_headers_api ${pthread_headers_api} ${CMAKE_CURRENT_BINARY_DIR}/${header})
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${header} ${CMAKE_CURRENT_BINARY_DIR}/${header} COPYONLY)
+endforeach()
+source_group("Header Files" FILES ${pthread_headers})
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-	add_definitions(-DPTW32_ARCH="x64")
-else(CMAKE_SIZEOF_VOID_P EQUAL 8 )
-	add_definitions(-DPTW32_ARCH="x86")
-endif(CMAKE_SIZEOF_VOID_P EQUAL 8)
+	add_definitions(-DPTW32_ARCHx64)
+else()
+	add_definitions(-DPTW32_ARCHx86)
+endif()
 
 if(MSVC)
     add_definitions(-DPTW32_RC_MSC)
-    set(pthread_exception_scheme "SE")
+    if (NOT DEFINED PTHREAD_EXCEPTION_SCHEME)
+        set(PTHREAD_EXCEPTION_SCHEME SE)
+    endif()
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4311 /wd4312")
     set(pthread_compiler V)
 elseif(CMAKE_COMPILER_IS_GNUCXX)
 	set(pthread_compiler G)
 endif()
 
-if(PTHREAD_CLEANUP EQUAL "SE")
+if(NOT DEFINED PTHREAD_EXCEPTION_SCHEME)
+    set(PTHREAD_EXCEPTION_SCHEME C)
+endif()  
+
+if(${PTHREAD_EXCEPTION_SCHEME} MATCHES SE)
 	add_definitions(-D__CLEANUP_SEH)
-elseif(pthread_exception_scheme EQUAL "CE")
-    add_definitions(-D__CLEANUP_CXX)	
-elseif(pthread_exception_scheme EQUAL "C")
+elseif(${PTHREAD_EXCEPTION_SCHEME} MATCHES CE)
+    add_definitions(-D__CLEANUP_CXX)
+elseif(${PTHREAD_EXCEPTION_SCHEME} MATCHES C)
     add_definitions(-D__CLEANUP_C)
 endif()
 
-set(target_name "PTHREAD${pthread_compiler}${pthread_exception_scheme})
+set(out_name "${out_prefix}${pthread_compiler}${PTHREAD_EXCEPTION_SCHEME}")
 
-add_definitions(-DHAVE_PTW32_CONFIG_H)
+add_definitions(-DHAVE_CONFIG_H)
+add_definitions(-DPTW32_STATIC_LIB)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
-add_library(${target_name} STATIC ${pthread_sources} ${pthread_api} ${pthread_resources})
-set_target_properties(${target_name} PROPERTIES PUBLIC_HEADER "${pthread_api}")
-install(TARGETS ${target_name} PUBLIC_HEADER DESTINATION . COMPONENT dev)
+add_library(${target} STATIC ${pthread_sources} ${pthread_headers} ${pthread_headers_api} ${pthread_resources})
+set_target_properties(${target} PROPERTIES OUTPUT_NAME "${out_name}")
