--- a/.install/pthread-win32/CMakeLists.txt
+++ b/.install/pthread-win32/CMakeLists.txt
@@ -15,6 +15,10 @@ endmacro()
 set(target pthread-win32)
 set(out_prefix pthread)
 
+if(${CMAKE_GENERATOR} MATCHES "Visual Studio")
+    set(MSVC ON)
+endif()
+
 project(${target})
 option(PTHREAD_SINGLE_FILE "All source files are aggregated into a single translation unit" ON)
 
@@ -43,9 +47,9 @@ endforeach()
 source_group("Header Files" FILES ${pthread_headers})
 
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-	add_definitions(-DPTW32_ARCHx64)
+    add_definitions(-DPTW32_ARCHx64)
 else()
-	add_definitions(-DPTW32_ARCHx86)
+    add_definitions(-DPTW32_ARCHx86)
 endif()
 
 if(MSVC)
@@ -56,7 +60,7 @@ if(MSVC)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4311 /wd4312")
     set(pthread_compiler V)
 elseif(CMAKE_COMPILER_IS_GNUCXX)
-	set(pthread_compiler G)
+    set(pthread_compiler G)
 endif()
 
 if(NOT DEFINED PTHREAD_EXCEPTION_SCHEME)
@@ -64,14 +68,14 @@ if(NOT DEFINED PTHREAD_EXCEPTION_SCHEME)
 endif()  
 
 if(${PTHREAD_EXCEPTION_SCHEME} MATCHES SE)
-	add_definitions(-D__CLEANUP_SEH)
+    add_definitions(-D__CLEANUP_SEH)
 elseif(${PTHREAD_EXCEPTION_SCHEME} MATCHES CE)
     add_definitions(-D__CLEANUP_CXX)
 elseif(${PTHREAD_EXCEPTION_SCHEME} MATCHES C)
     add_definitions(-D__CLEANUP_C)
 endif()
 
-set(out_name "${out_prefix}${pthread_compiler}${PTHREAD_EXCEPTION_SCHEME}")
+set(output_name "${out_prefix}${pthread_compiler}${PTHREAD_EXCEPTION_SCHEME}")
 
 add_definitions(-DHAVE_CONFIG_H)
 add_definitions(-DPTW32_STATIC_LIB)
@@ -79,6 +83,6 @@ add_definitions(-DPTW32_STATIC_LIB)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 add_library(${target} STATIC ${pthread_sources} ${pthread_headers} ${pthread_headers_api} ${pthread_resources})
-set_target_properties(${target} PROPERTIES OUTPUT_NAME ${out_name})
-set_target_properties(${target} PROPERTIES COMPILE_PDB_NAME ${out_name})
+set_target_properties(${target} PROPERTIES OUTPUT_NAME ${output_name})
+set_target_properties(${target} PROPERTIES COMPILE_PDB_NAME ${output_name})
 set_target_properties(${target} PROPERTIES COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
