--- a/.install/pthread-win32/CMakeLists.txt
+++ b/.install/pthread-win32/CMakeLists.txt
@@ -12,8 +12,36 @@ macro(msvc_set_static_runtime)
     endforeach()
 endmacro()
 
+macro(pthread_init_tests dir)
+    file(GLOB pthread_test_sources ${dir}/*.c)
+    source_group("Source Files" FILES ${pthread_test_sources})
+    list(REMOVE_ITEM pthread_test_sources ${dir}/benchlib.c ${dir}/wrapper4tests_1.c)
+    file(GLOB pthread_test_headers ${dir}/*.h)
+    source_group("Header Files" FILES ${pthread_test_headers})
+    list(REMOVE_ITEM pthread_test_headers ${dir}/benchtest.h)
+    add_library(benchlib STATIC ${dir}/benchlib.c ${dir}/benchtest.h ${pthread_test_headers} ${pthread_headers_api})
+    set_target_properties(benchlib PROPERTIES COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} FOLDER Tests)
+    foreach(_test ${pthread_test_sources})
+        get_filename_component(_tmp ${_test} NAME_WE)
+        add_executable(${_tmp} ${_test} ${pthread_test_headers} ${pthread_headers_api})
+        if(${_tmp} MATCHES "benchtest")
+            target_sources(${_tmp} PUBLIC ${dir}/benchtest.h)
+            target_link_libraries(${_tmp} benchlib)
+        elseif(${_tmp} MATCHES "cancel9")
+            target_link_libraries(${_tmp} "ws2_32")
+        elseif(${_tmp} MATCHES "sequence2")
+            target_sources(${_tmp} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/implement.h)
+        endif()
+        set_target_properties(${_tmp} PROPERTIES FOLDER Tests)
+        target_link_libraries(${_tmp} ${target})
+        add_test(NAME ${_tmp} COMMAND $<TARGET_FILE:${_tmp}>)
+    endforeach()
+endmacro()
+
 set(target pthread-win32)
 set(out_prefix pthread)
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+enable_testing()
 
 if(${CMAKE_GENERATOR} MATCHES "Visual Studio")
     set(MSVC ON)
@@ -37,13 +65,12 @@ source_group("Source Files" FILES ${pthread_sources})
 file(GLOB pthread_resources ${CMAKE_CURRENT_SOURCE_DIR}/*.rc)
 source_group("Resource Files" FILES ${pthread_resources})
 
-set(pthread_headers_api_names pthread.h sched.h semaphore.h config.h)
-file(GLOB pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
+set(pthread_headers_api_names pthread.h sched.h semaphore.h)
 foreach(header ${pthread_headers_api_names})
-    list(REMOVE_ITEM pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/${header})
-    set(pthread_headers_api ${pthread_headers_api} ${CMAKE_CURRENT_BINARY_DIR}/${header})
+    set(pthread_headers_api ${pthread_headers_api} ${CMAKE_CURRENT_SOURCE_DIR}/${header})
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/${header} ${CMAKE_CURRENT_BINARY_DIR}/${header} COPYONLY)
 endforeach()
+file(GLOB pthread_headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
 source_group("Header Files" FILES ${pthread_headers})
 
 if(${CMAKE_GENERATOR_PLATFORM} MATCHES "x64")
@@ -57,6 +84,8 @@ endif()
 if(MSVC)
     if(NOT MSVC_RUNTIME_DYNAMIC)
         msvc_set_static_runtime()
+    else()
+        add_definitions(-D_DLL)
     endif()
     add_definitions(-DPTW32_RC_MSC)
     if (NOT DEFINED PTHREAD_EXCEPTION_SCHEME)
@@ -86,11 +115,16 @@ set(PTHREADS_COMPATIBILITY_VERSION 2)
 set(output_name "${out_prefix}${pthread_compiler}${PTHREAD_EXCEPTION_SCHEME}${PTHREADS_COMPATIBILITY_VERSION}")
 
 add_definitions(-DHAVE_CONFIG_H)
-add_definitions(-DPTW32_STATIC_LIB)
 
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
+if(BUILD_SHARED_LIBS)
+    remove_definitions(-DPTW32_STATIC_LIB)
+else()
+    add_definitions(-DPTW32_STATIC_LIB)
+endif()
 
-add_library(${target} ${pthread_sources} ${pthread_headers} ${pthread_headers_api} ${pthread_resources})
-set_target_properties(${target} PROPERTIES OUTPUT_NAME ${output_name})
-set_target_properties(${target} PROPERTIES COMPILE_PDB_NAME ${output_name})
-set_target_properties(${target} PROPERTIES COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
+add_library(${target} ${pthread_sources} ${pthread_headers} ${pthread_resources})
+set_target_properties(${target} PROPERTIES OUTPUT_NAME ${output_name} COMPILE_PDB_NAME ${output_name} COMPILE_PDB_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
+pthread_init_tests(${CMAKE_CURRENT_SOURCE_DIR}/tests)
